# liquidation_monitor

./: .gitignore  Cargo.toml  README.md  config.json  log_config.yaml  package-lock.json  package.json  webpack.config.js
src/: actix_actors.rs  main.rs
src/services/: data_processor.rs  mod.rs  settings.rs  types.rs  web_socket.rs
src/tests/: deserializer_tests.rs  mod.rs
www/src/: App.js  index.html  index.js  styles.css  template.html
