[package]
name = "liquidation_monitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
pretty_assertions = "0.7.2"

[dependencies]
anyhow = "1.0.42"
log = "0.4.13"
log4rs = "1.0.0"
env_logger = "0.8"
serde_json = "1.0.59"
rust_decimal = "1.10.3"
futures = "0.3"
futures-util = "0.3.14"
url = "2.2.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["sync"] }
tokio-tungstenite = {version ="0.14.0", features = ["native-tls"] }
actix = "0.12.0"
actix-web = "4.0.0-beta.9"
actix-web-actors = "4.0.0-beta.7"
actix-files = "0.6.0-beta.7"
actix-broker = "0.4.1"
regex = "1.5.4"